--- a/php/makefile
+++ b/php/makefile
@@ -1,4 +1,5 @@
-#useage: make port=7000
+#usage: make
+#https://www.php.net/manual/en/install.unix.apache2.php
 
 nullstring :=#end of the line
 pwd =$(patsubst %/,%, $(dir $(abspath $(lastword $(MAKEFILE_LIST)))))#pwd
@@ -8,8 +9,7 @@ pwd := $(shell dirname $(pwd))
 $(info pwd = $(pwd))
 
 
-skip_php = $(pwd)/php
-php_version =7.2.31
+php_version =7.4.15
 php: httpd
 ifeq ($(wildcard php-$(php_version).tar.gz), $(nullstring))
 	#wget http://cn2.php.net/distributions/php-$(php_version).tar.gz
@@ -20,12 +20,23 @@ ifeq ($(wildcard php-$(php_version)), $(nullstring))
 	tar -zxvf php-$(php_version).tar.gz
 endif
 #skip compiling
-#ifeq ($(wildcard $(pwd)/php), $(nullstring)) 
+ifeq ($(wildcard $(pwd)/php), $(nullstring))
+	mkdir -p $(pwd)/php/etc
+	cp php-$(php_version)/php.ini-production $(pwd)/php/etc/php.ini
+	sed -i 's/^;extension=mysqli/extension=mysqli/g' $(pwd)/php/etc/php.ini
+	
 	cd php-$(php_version);\
-	./configure --prefix=$(pwd)/php --with-apxs2=$(pwd)/httpd/bin/apxs --with-config-file-path=$(pwd)/php/etc;\
+	./configure --prefix=$(pwd)/php \
+	            --with-apxs2=$(pwd)/httpd/bin/apxs \
+	            --with-config-file-path=$(pwd)/php/etc \
+	            --with-mysqli=$(pwd)/mysql/bin/mysql_config \
+	            --with-mysql-sock \
+	            --enable-inline-optimization \
+	            --without-sqlite3 \
+	            --without-pdo_sqlite;\
 	make && make install;\
 	cd ../
-#endif	
+endif
 
 apr_version =1.7.0
 apr:
@@ -38,12 +49,12 @@ ifeq ($(wildcard apr-$(apr_version)), $(nullstring))
 	tar -zxvf apr-$(apr_version).tar.gz
 endif
 #skip compiling
-#ifeq ($(wildcard $(pwd)/apr), $(nullstring))
+ifeq ($(wildcard $(pwd)/apr), $(nullstring))
 	cd apr-$(apr_version);\
 	./configure --prefix=$(pwd)/apr;\
 	make && make install;\
 	cd ../
-#endif
+endif
 
 expat_version =	2.0.1
 expat:
@@ -54,12 +65,13 @@ endif
 ifeq ($(wildcard expat-$(expat_version)), $(nullstring))
 	tar -zxvf expat_$(expat_version).orig.tar.gz
 endif
-#ifeq ($(wildcard $(pwd)/expat), $(nullstring))
+#skip compiling
+ifeq ($(wildcard $(pwd)/expat), $(nullstring))
 	cd expat-$(expat_version);\
 	./configure --prefix=$(pwd)/expat;\
 	make && make install;\
 	cd ../
-#endif 
+endif
 	
 apr_util_version =1.6.1
 apr-util: apr expat
@@ -69,12 +81,13 @@ endif
 ifeq ($(wildcard apr-util-$(apr_util_version)), $(nullstring))
 	tar -zxvf apr-util-$(apr_util_version).tar.gz
 endif
-#ifeq ($(wildcard $(pwd)/apr-util), $(nullstring))
+#skip compiling
+ifeq ($(wildcard $(pwd)/apr-util), $(nullstring))
 	cd apr-util-$(apr_util_version);\
 	./configure --prefix=$(pwd)/apr-util --with-apr=$(pwd)/apr --with-expat=$(pwd)/expat;\
 	make && make install;\
 	cd ../
-#endif 	
+endif
 	
 pcre_version =8.40
 pcre:
@@ -84,30 +97,32 @@ endif
 ifeq ($(wildcard pcre-$(pcre_version)), $(nullstring))
 	tar -zxvf pcre-$(pcre_version).tar.gz
 endif
-#ifeq ($(wildcard $(pwd)/pcre), $(nullstring))
+#skip compiling
+ifeq ($(wildcard $(pwd)/pcre), $(nullstring))
 	cd pcre-$(pcre_version);\
 	./configure --prefix=$(pwd)/pcre;\
 	make && make install;\
 	cd ../
-#endif	
-	
+endif
+		
 httpd_version =2.4.46
 httpd: apr apr-util pcre
 ifeq ($(wildcard httpd-$(httpd_version).tar.gz), $(nullstring))
-#	wget https://downloads.apache.org/httpd/httpd-$(httpd_version).tar.gz
-	wget https://mirror.bit.edu.cn/apache/httpd/httpd-$(httpd_version).tar.gz
+	wget https://downloads.apache.org/httpd/httpd-$(httpd_version).tar.gz
+#	wget https://mirror.bit.edu.cn/apache/httpd/httpd-$(httpd_version).tar.gz
 #	wget https://mirrors.bfsu.edu.cn/apache/httpd/httpd-$(httpd_version).tar.gz
 #	wget https://mirrors.tuna.tsinghua.edu.cn/apache/httpd/httpd-$(httpd_version).tar.gz
 endif
 ifeq ($(wildcard httpd-$(httpd_version)), $(nullstring))
 	tar -zxvf httpd-$(httpd_version).tar.gz
 endif
-#ifeq ($(wildcard $(pwd)/httpd), $(nullstring))
+#skip compiling
+ifeq ($(wildcard $(pwd)/httpd), $(nullstring))
 	cd httpd-$(httpd_version);\
 	./configure --prefix=$(pwd)/httpd --with-apr=$(pwd)/apr --with-apr-util=$(pwd)/apr-util --with-pcre=$(pwd)/pcre --with-expat=$(pwd)/expat;\
 	make && make install;\
 	cd ../
-#endif
+endif
+	sh insert.sh $(pwd) "<IfModule mime_module>" "    AddType application/x-httpd-php .php"
+	sh insert.sh $(pwd) "<IfModule dir_module>" "    DirectoryIndex index.php index.html"
 	
-	sed -i '/<IfModule mime_module>/a\tAddType application/x-httpd-php .php' $(pwd)/httpd/conf/httpd.conf
-#	sed -i "/ServerName www.example.com:80/aServerName localhost:80" $(pwd)/httpd/conf/httpd.conf
