--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,3 +1,6 @@
+[mysql]
+local-infile=1
+
 [client]
 port=$(mysql_port)
 socket=$(pwd)/mysql/mysql.sock
@@ -19,3 +22,4 @@ log_error=$(pwd)/mysql/error.log
 server-id=100
 default_authentication_plugin=mysql_native_password
 tmpdir=$(pwd)/tmp
+local-infile=1
