--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -23,3 +23,10 @@ server-id=100
 default_authentication_plugin=mysql_native_password
 tmpdir=$(pwd)/tmp
 local-infile=1
+net_read_timeout=3000
+max_allowed_packet=1073741824
+connect_timeout=1000
+regexp_time_limit=512
+
+;default-storage-engine=InnoDB
+;innodb_force_recovery=0
