--- a/php/makefile
+++ b/php/makefile
@@ -159,3 +159,67 @@ endif
 clean:
 	rm -rf $(pwd)/php -rf $(pwd)/httpd	
 	
+	
+libzip_version =1.2.0
+libzip:
+ifeq ($(wildcard libzip-$(libzip_version).tar.gz), $(nullstring))
+	wget --no-check-certificate https://libzip.org/download/libzip-$(libzip_version).tar.gz
+endif
+ifeq ($(wildcard libzip-$(libzip_version)), $(nullstring))
+	tar -zxvf libzip-$(libzip_version).tar.gz
+endif
+#skip compiling
+ifeq ($(wildcard $(pwd)/libzip), $(nullstring))
+	cd libzip-$(libzip_version);\
+    ./configure --prefix=$(pwd)/libzip;\
+    make && make install
+	cp $(pwd)/libzip/lib/libzip/include/zipconf.h $(pwd)/libzip/include/zipconf.h
+endif
+	
+	
+zip_version =1.16.0
+zip: libzip
+ifeq ($(wildcard zip-$(zip_version).tgz), $(nullstring))
+	wget http://pecl.php.net/get/zip-$(zip_version).tgz
+endif
+ifeq ($(wildcard zip-$(zip_version)), $(nullstring))
+	tar -zxvf zip-$(zip_version).tgz
+endif
+#skip compiling
+ifeq ($(wildcard $(pwd)/zip), $(nullstring))
+	cd zip-$(zip_version);\
+	$(pwd)/php/bin/phpize;\
+    ./configure --with-libzip=$(pwd)/libzip \
+    --with-php-config=$(pwd)/php/bin/php-config;\
+    make && make install
+    
+	bash ../insert.sh $(pwd)/php/etc/php.ini "Module Settings ;" "[zip]\nextension=zip.so"    
+	bash ../update.sh $(pwd)/php/etc/php.ini "http://php.net/zlib.output-compression" "zlib.output_compression = On"
+endif
+		
+oniguruma_version =6.9.4
+oniguruma: 
+ifeq ($(wildcard oniguruma-$(oniguruma_version).tar.gz), $(nullstring))
+	wget https://github.com/kkos/oniguruma/archive/refs/tags/v$(oniguruma_version).tar.gz -O oniguruma-$(oniguruma_version).tar.gz
+endif
+ifeq ($(wildcard oniguruma-$(oniguruma_version)), $(nullstring))
+	tar -zxvf oniguruma-$(oniguruma_version).tar.gz
+endif
+#skip compiling
+ifeq ($(wildcard $(pwd)/oniguruma), $(nullstring))
+	cd oniguruma-$(oniguruma_version);\
+	./autogen.sh && ./configure --prefix=$(pwd)/oniguruma;\
+    make && make install
+    
+	bash ../bash_profile.sh PKG_CONFIG_PATH=$(pwd)/oniguruma/lib/pkgconfig
+	bash ../bash_profile.sh LD_LIBRARY_PATH=$(pwd)/oniguruma/lib/
+	bash ../bash_profile.sh LD_RUN_PATH=$(pwd)/oniguruma/lib
+	
+endif
+
+# PHP Fatal error: Uncaught Error: Call to undefined function mb_strlen()
+mbstring: oniguruma
+	cd $(pwd)/shell/php/php-$(shell echo `php -v` | sed -E 's/.*PHP ([0-9.]+) \(cli\).*/\1/')/ext/mbstring;\
+	$(pwd)/php/bin/phpize;\
+	./configure --with-php-config=$(pwd)/php/bin/php-config;\
+	make && make install
